Update Jenkinsfile for java_home

--- a/java-hello-world/Jenkinsfile
+++ b/java-hello-world/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         }
   }
   environment {
+    JAVA_HOME = '/usr/lib/jvm/java-17-openjdk-amd64'
     MAVEN_OPTS = 'Dmaven.repo.local=$HOME/.m2/repository'//local repo
   }
   stages {
