--- a/java-hello-world/Jenkinsfile
+++ b/java-hello-world/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker { 
-        image 'maven:3.8.5-openjdk-17' 
+        image 'maven:3.8.1-openjdk-17' 
         args '-v /root/.m2:/root/.m2'
         }
    }
@@ -14,7 +14,7 @@ pipeline {
     }
     stage('Build'){
         steps {
-          dir('java-hello-world/java-hello')
+          dir('java-hello'){
             sh 'java -version'
             sh 'mvn -v'
             sh 'mvn clean package'
